<resources>
    <string name="app_name">Singapore Police Force Location Helper</string>
    <string name="title_activity_maps">SPF Location Helper</string>
    <!--Search Bar-->
    <string name="search_hint">Search here</string>
    <!--Reverse Geocoder-->
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <!--Bottom Sheet-->
    <string name="neighbourhood_police_centre">Neighbourhood Police Centre</string>
    <string name="neighbourhood_police_centre_abbreviation">NPC</string>
    <string name="neighbourhood_police_post">Neighbourhood Police Post</string>
    <string name="neighbourhood_police_post_abbreviation">NPP</string>
    <string name="facebook_url_prefix">facebook.com/</string>
    <string name="call"><b>CALL</b></string>
    <string name="no_number_found">No number to call</string>
    <string name="directions"><b>DIRECTIONS</b></string>
    <string name="website"><b>WEBSITE</b></string>
    <string name="no_link_found">No link to open</string>
    <!--Navigation Drawer-->
    <string name="navigation_header">Singapore Police Force Location Helper</string>
    <string name="spf_logo_desc">Singapore Police Force logo</string>
    <string name="nav_about">About</string>
    <string name="nav_establishments">Show Establishments</string>
    <!--About Page-->
    <string name="about_app_desc">The idea behind this application was first conceived back in 2017 when
        I was on filer duty in Clementi Police Division and erroneously thought that Jurong Island fell
        under the jurisdiction of Jurong Police Division. Subsequently, I realised that the datasets for
        both the NPC boundaries and police establishments could be found online. Work on this application
        started in late 2018.</string>
    <string name="about_build_version">Build Version</string>
    <string name="about_author">Author</string>
    <string name="about_author_name">Ian Yong</string>
    <string name="about_datasets">Datasets</string>
    <string name="about_datasets_desc">No non-publicly available information was used in this application.
        All datasets were sourced from https://data.gov.sg and used in accordance to the Singapore Open
        Data License v1.0\n\nSingapore Police Force NPC Boundary\nLast official update on December 21, 2017
        \nUnofficially edited to include Woodlands Police Division on November 29, 2018\n\nSingapore Police
        Force Establishments\nLast official update on November 23, 2018</string>
    <string name="about_disclaimer">This application is not endorsed by, directly affiliated with, maintained,
        authorised, or sponsored by the Singapore Police Force. The SPF crest, logos, and information used
        in this app are owned by, licensed to, or controlled by the SPF. This application is purely a hobby
        project.</string>
    <!--Nearest Station Utility-->
    <string name="no_marker_dialog_title">No location selected</string>
    <string name="no_marker_dialog_message">Please select a location using the search bar or by long pressing the map.</string>
    <string name="no_marker_dialog_ok">OK</string>
    <string name="search_type_dialog_title">Choose a search type</string>
    <string-array name="search_type_dialog_options">
        <item>Nearest NPC</item>
        <item>Nearest NPC or NPP</item>
    </string-array>
    <string name="search_results_dialog_title">Search results</string>
</resources>
